@@ -1,0 +1,32 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      lang="en"
+      metal:use-macro="context/@@standard_macros/page"
+      i18n:domain="collage">
+
+  <div metal:fill-slot="body">
+    <metal:main-macro define-macro="main">
+
+      <div id="collage">
+
+        <div tal:replace="structure context/@@renderer" />
+
+        <span class="discreet"
+              i18n:translate="label_no_items_added"
+              tal:condition="not: here/folderlistingFolderContents">
+          This Collage-object does not have any items yet.
+          Add a row and place columns and items inside.
+        </span>
+
+        <form class="insert-row"
+              tal:attributes="action string:${here/absolute_url}/insert-row">
+          <input id="insert-collage-row"
+                 type="submit" class="context" value="Add row"
+                 i18n:attributes="value button_add_collagerow"
+               />
+        </form>
+
+      </div>
+    </metal:main-macro>
+  </div>
+
+</html>
