@@ -5,4 +5,3 @@
       <tal:item replace="structure item" />
     </div>
 </tal:block>
-<tal:manager replace="structure provider:collage.BelowItemsManager" />
