@@ -3,9 +3,9 @@
  <action-provider name="portal_actions">
   <action title="Back to Collage" action_id="revisitCollage" category="object"
      condition_expr="object/@@collage_helper/isCollageContent"
-     url_expr="string:${object/@@collage_helper/getCollageObjectURL}/compose_page"
+     url_expr="string:${object/@@collage_helper/getCollageObjectURL}/compose"
      visible="True">
-   <permission>List folder contents</permission>
+   <permission>Modify portal contents</permission>
   </action>
  </action-provider>
  </object>
