@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_css">
  <stylesheet title="" cacheable="True" compression="safe" cookable="False"
-    enabled="1" expression="object/@@collage|nothing"
+    enabled="1" expression="nocall: object/@@collage_view|nothing"
 	     id="collage.css" media="all" rel="stylesheet"
     rendering="import"/>
 </object>
